Added bundle and github info service.
Continued cleaning up of POM files.  Enabled SCR annotations for OSGi
service definitions.  Added new service providing discovery of
ENOS/Netshell bundle information and github build information.  Changes
build, ssh works, and python shell runs.  Assuming no other
functionality was broken.

--- a/odl-corsa/pom.xml
+++ b/odl-corsa/pom.xml
@@ -275,7 +275,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>ESnet NetShell Open Daylight (Corsa) Integration</Bundle-Name>
+                        <Bundle-Name>ESnet :: NetShell :: Open Daylight (Corsa) Integration</Bundle-Name>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>net.es.netshell.odlcorsa.impl</Export-Package>
                         <!--
