--- a/odl-corsa-intf/pom.xml
+++ b/odl-corsa-intf/pom.xml
@@ -168,7 +168,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>ESnet NetShell Open Daylight (Corsa) Interfaces</Bundle-Name>
+                        <Bundle-Name>ESnet :: NetShell :: Open Daylight (Corsa) Interfaces</Bundle-Name>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>net.es.netshell.odlcorsa</Export-Package>
                         <!--
