--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -36,7 +36,7 @@
     <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
-    
+
     <properties>
         <!--
         YANG definitions:  In other examples, etc. these seem to come from somewhere like
@@ -265,7 +265,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>ESnet NetShell Open Daylight (MD-SAL) Integration</Bundle-Name>
+                        <Bundle-Name>ESnet :: NetShell :: Open Daylight (MD-SAL) Integration</Bundle-Name>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>net.es.netshell.odlmdsal.impl</Export-Package>
                         <!--
