--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -45,6 +45,14 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version.source>1.7</java.version.source>
         <java.version.target>1.7</java.version.target>
+        <netshell.version>1.0.0-SNAPSHOT</netshell.version>
+        <karaf.version>3.0.6</karaf.version>
+        <swagger.version>1.5.7</swagger.version>
+        <osgi.version>5.0.0</osgi.version>
+        <slf4j.version>1.7.9</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+        <git.commit.version>2.2.1</git.commit.version>
+        <maven.bundle.version>2.5.3</maven.bundle.version>
     </properties>
 
     <scm>
@@ -58,6 +66,53 @@
             <url>http://downloads.es.net/maven</url>
         </repository>
     </distributionManagement>
+
+    <repositories>
+	<repository>
+            <id>Jsch</id>
+    	    <url>http://jsch.sf.net/maven2/</url>
+    	</repository>
+    	<repository>
+      	    <id>libvirt-org</id>
+       	    <url>http://libvirt.org/maven2</url>
+      	</repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+        <!-- ServiceMix repo (for region) -->
+        <repository>
+            <id>servicemix</id>
+            <name>Apache ServiceMix Repository</name>
+            <url>http://svn.apache.org/repos/asf/servicemix/m2-repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>interval:5</updatePolicy>
+            </snapshots>
+            <id>esnet</id>
+            <name>ESnet Private Maven Repository</name>
+            <url>http://downloads.es.net/maven</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>onejar-maven-plugin.googlecode.com</id>
+            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
