--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -82,11 +82,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>net.sf.expectit</groupId>
             <artifactId>expectit-core</artifactId>
             <version>0.8.0</version>
-            </dependency>
+        </dependency>
+
         <dependency>
 	    <groupId>org.libvirt</groupId>
      	    <artifactId>libvirt</artifactId>
@@ -111,6 +113,7 @@
     	    <artifactId>jna</artifactId>
 	    <version>4.0.0</version>
     	</dependency>
+
 	<dependency>
 	    <groupId>net.java.dev.jna</groupId>
 	    <artifactId>jna-platform</artifactId>
@@ -120,18 +123,31 @@
 	<dependency>
             <groupId>jline</groupId>
             <artifactId>jline</artifactId>
-            <version>2.11</version>
+            <version>2.12.1</version>
         </dependency>
+
+        <!--<dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.quartz</artifactId>
+            <version>2.2.3_1</version>
+        </dependency>-->
 
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.1</version>
         </dependency>
 
         <dependency>
@@ -154,6 +170,12 @@
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.2</version>
         </dependency>
@@ -163,6 +185,7 @@
             <artifactId>amqp-client</artifactId>
             <version>3.5.3</version>
         </dependency>
+
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
@@ -192,6 +215,7 @@
             <artifactId>jackson-core-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
+
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
@@ -211,6 +235,12 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.54</version>
+        </dependency>
+
+        <dependency>
+           <groupId>org.bouncycastle</groupId>
+           <artifactId>bcprov-jdk15on</artifactId>
+           <version>1.54</version>
         </dependency>
 
         <dependency>
@@ -344,8 +374,10 @@
                         </Export-Package>
                         <Import-Package>
                             org.bouncycastle.openssl;version="[1.50,2)";resolution:=optional,
+                            !jline,
                             *
                         </Import-Package>
+                        <Embed-Dependency>jline</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
